1998-07-13  Alex Lancaster  <alex@santafe.edu>

	* acswarm.m4: Add file.  Add two new m4 macros al_{SWARM_LOAD,
	SWARM_INIT} to search for current Swarm config for applications and
	libraries.

	* Makefile.am (EXTRA_DIST): Add acswarm.m4.

1998-07-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* actcltk.m4 (md_FIND_BLT): Don't set default bltlibname to BLT8.0.

1998-06-30  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* acfind.m4: Use $$1libdir, not $$libdir.

	* actcltk.m4 (INCPLACES, LIBPLACES): Add tcl8.1 and tk8.1.
	(md_FIND_TCL_LIBRARIES, md_FIND_TK_LIBRARIES): Add 81 and 8.1 for
	Tcl library versions.  Clear t{cl,k}libdir before checking.
	(bltlibdir): Substitute.

	* acfind.m4: New file.

	* acpng.m4: Move md_FIND_{LIB,INCLUDE} to acfind.m4.

	* actcltk.m4: Use md_FIND_LIB in md_FIND_BLT.

1998-06-25  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* acpng.m4: Use zliblibdir and pnglibdir instead of zlibdir and
	pngdir.

1998-06-24  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* actcltk.m4 (INCPLACES, LIBPLACES): Add cygwin paths.
	
	* actcltk.m4, acpng.m4: Loop over .so and .a within directories.

	* acpng.m4 (md_FIND_LIB, md_FIND_INCLUDE): New macros.  Use both
	in md_FIND_ZLIB and md_FIND_PNG.

	* actcltk.m4: Rename {TCL,TK}LIBNAME to {tcl,tk}libname.

	* Makefile.am:  New file.

1998-06-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* actcltk.m4: Don't clear tkincludedir or tclincludedir before
	scanning directories.  First check any previous setting.

1998-06-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* actcltk.m4 (INCPLACES, LIBPLACES): Use defaultdir instead of
	prefix.  Update for Tcl, Tk, and BLT for shared libraries.  Set
	and substitute TCLLIB, TKLIB, BLTLIB, TCLLDFLAGS, TKLDFLAGS, and
	BLTLDFLAGS.
	(md_FIND_TCLOBJC_HEADERS): Use defaultdir instead of prefix.
	(md_FIND_TCLOBJC_LIBRARIES): Set and substitute TCLOBJCLIB and
	TCLOBJCLDFLAGS.
	(md_FIND_TCL_LIBRARIES): Check first in tcllibdir.
	(md_FIND_TK_LIBRARIES): Check first in tklibdir.
